<resources>
    <string name="app_name">MyTool</string>

    <string name="main_activity">MyTool</string>
    <string name="bezier_activity">贝塞尔曲线</string>
    <string name="touch_activity">触摸控件</string>
    <string name="login_mvp_activity">登录(MVP)</string>
    <string name="games_activity">GAMEs</string>
    <string name="pc_connect_activity">PC交互</string>

    <string name="loading">加载中</string>

    <!-- dialog-->
    <string name="dialog_default_confirm">确认</string>
    <string name="dialog_default_cancel">取消</string>
    <string name="dialog_default_delete">删除</string>

    <string name="dialog_default_title">标题</string>
    <string name="dialog_default_content">内容</string>

    <string name="icon_arrow_down">&#xe621;</string>
    <string name="icon_arrow_left">&#xe601;</string>
    <string name="icon_arrow_left_thine">&#xe618;</string>
    <string name="icon_arrow_up">&#xe650;</string>
    <string name="icon_arrow_right">&#xe675;</string>
    <string name="icon_arrow_right_thine">&#xe61e;</string>


    <string name="login_username_title">用户名</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_title">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_btn">登录</string>


    <string name="game_block">争霸艾泽拉斯</string>


    <string name="game_minesweep">扫雷</string>
    <string name="game_minesweep_tip">单击标记；双击打开</string>

    <!--  备忘录  -->
    <string name="notes_activity">备忘录</string>
    <string name="notes_calendar">日历</string>
    <string name="notes_edit_activity">编辑备忘录</string>
    <string name="notes_edit_title">标题</string>
    <string name="notes_edit_title_hint">备忘录</string>
    <string name="notes_edit_date">日期</string>
    <string name="notes_edit_knock">提醒</string>
    <string name="notes_edit_content">内容</string>
    <string name="notes_edit_content_hint">无</string>
    <string name="notes_edit_state">状态</string>
    <string name="notes_edit_label">标签</string>

    <string name="notes_dialog_title">确认完成？</string>


    <string name="pc_wifi_error">请正确连接WIFI</string>

    <!--    read-->
    <string name="read_act">阅读</string>
    <string name="bookshelf_title">书架</string>

    <string name="read_menu_catelog">目录</string>
    <string name="read_menu_layout">布局</string>
    <string name="read_menu_style">样式</string>

    <!--    book-->
    <string name="book_default_name">标题</string>

    <!--    leadBook-->
    <string name="leadbook_title">书籍导入</string>
    <string name="leadbook_tip">请取保您的手机和传输设备在同一局域网内，传输过程中请勿关闭此页面</string>
    <string name="leadbook_wifi_title">WIFI导入</string>
    <string name="leadbook_wifi_tip">在电脑浏览器中访问以下地址</string>
    <string name="leadbook_btn_wifi">复制地址</string>

    <string name="leadbook_local_title">本地上传</string>
    <string name="leadbook_btn_local">一键上传</string>
    <string name="leadbook_locak_tip">仅支持TXT、EPUB格式</string>

    <string name="leadbook_wifi_error">请正确连接WIFI</string>


    <!--    文件中转-->
    <string name="file_transfer_activity_title">文件中转</string>


    <!--    tools-->
    <string name="tools_title">工具</string>
    <string name="tools_game">游戏</string>
    <string name="tools_file_transfer">文件中转</string>
    <string name="tools_develop_test">测试</string>

    <!--    日程-->
    <string name="schedule_title">日程</string>
    <string name="schedule_edit_hint">日程</string>
    <string name="schedule_edit_date">日期</string>
    <string name="schedule_edit_repeat_switch">是否循环</string>


    <string name="schedule_filter_all">全部</string>

    <string name="schedule_list_title_earlier">更早</string>
    <string name="schedule_list_title_today">今天</string>
    <string name="schedule_list_title_week">本周</string>
    <string name="schedule_list_title_month">本月</string>
    <string name="schedule_list_title_year">今年</string>

    <string name="schedule_filter_undone">待办</string>
    <string name="schedule_filter_finished">已完成</string>
    <string name="schedule_filter_deleted">已删除</string>

    <string name="schedule_put_off_success">已推迟一天</string>


    <!--    iconfont-->
    <string name="iconfont_add">&#xe609;</string>
    <string name="iconfont_refresh">&#xe622;</string>
    <string name="iconfont_undo">&#xe62b;</string>
    <string name="iconfont_back">&#xe601;</string>
    <string name="iconfont_menu">&#xe620;</string>
    <string name="iconfont_correct">&#xe6aa;</string>
</resources>