<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pw.codeset.weidgt.ActivityHeaderView
        android:id="@+id/activity_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title_text="@string/notes_edit_activity"
        app:menutext="@string/iconfont_correct"
        app:showmenu="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
        android:id="@+id/notes_edit_title_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes_edit_title"
        android:textColor="@color/normal_title_color"
        android:textSize="@dimen/title_textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/view_defaultpadding_double"
        android:layout_marginTop="@dimen/view_defaultmargin"
        />

    <EditText
        android:id="@+id/notes_edit_title_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/notes_edit_title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edit_title_title"
        android:background="@drawable/back_alpha_radiusall"
        android:padding="@dimen/view_defaultpadding"
        android:layout_margin="@dimen/view_defaultmargin"
        />

    <TextView
        android:id="@+id/notes_edit_content_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes_edit_content"
        android:textColor="@color/normal_title_color"
        android:textSize="@dimen/title_textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edit_title_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/view_defaultpadding_double"
        android:layout_marginTop="@dimen/view_defaultmargin"
        />

    <EditText
        android:id="@+id/notes_edit_content_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:gravity="top|left"
        android:hint="@string/notes_edit_content_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edit_content_title"
        android:background="@drawable/back_alpha_radiusall"
        android:padding="@dimen/view_defaultpadding"
        android:layout_margin="@dimen/view_defaultmargin"
        />

    <Button
        android:id="@+id/notes_add_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加日历提醒"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edit_content_edit"
        android:layout_marginLeft="@dimen/view_defaultmargin"
        android:layout_marginTop="@dimen/view_defaultmargin"
        android:onClick="addCalendar"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/notes_calendar_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="notes_edit_date_title,notes_edit_date_edit"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/notes_edit_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes_edit_date"
        android:textColor="@color/normal_title_color"
        android:textSize="@dimen/title_textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_add_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/view_defaultpadding_double"
        android:layout_marginTop="@dimen/view_defaultmargin"
        />

    <TextView
        android:id="@+id/notes_edit_date_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/notes_edit_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edit_date_title"
        android:background="@drawable/back_alpha_radiusall"
        android:padding="@dimen/view_defaultpadding"
        android:layout_margin="@dimen/view_defaultmargin"
        android:onClick="addCalendar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>