<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pw.codeset.weidgt.ActivityHeaderView
        android:id="@+id/activity_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title_text="@string/game_minesweep"
        app:menutext="@string/iconfont_refresh"
        app:showmenu="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
        android:id="@+id/minesweep_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_minesweep_tip"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_header"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/minesweep_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minesweep_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>