<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pw.codeset.weidgt.ActivityHeaderView
        android:id="@+id/activity_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title_text="@string/notes_activity"
        app:backText="@string/notes_calendar"
        app:menutext="@string/iconfont_add"
        app:showmenu="true"
        app:showback="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <com.pw.codeset.weidgt.WarpLinearLayout
        android:id="@+id/notes_tag_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:grivate="left"
        app:isFull="false"
        app:vertical_Space="@dimen/view_defaultmargin"
        app:horizontal_Space="@dimen/view_defaultmargin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_header"
        android:padding="@dimen/view_defaultmargin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TAG"
            android:gravity="center"
            android:textSize="@dimen/minor_textsize"
            android:background="@drawable/border_gray_all_radius"
            android:backgroundTint="@color/selector_btn_color_t_b"
            android:paddingLeft="@dimen/view_defaultpadding_double"
            android:paddingRight="@dimen/view_defaultpadding_double"
            />

    </com.pw.codeset.weidgt.WarpLinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_tag_container"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>