<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_notes_body"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="@dimen/view_defaultpadding"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_margin="@dimen/view_defaultmargin"
    app:cardCornerRadius="@dimen/view_defaultpadding"
    app:cardElevation="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/item_notes_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="标题"
            android:textStyle="bold"
            android:textColor="@color/normal_title_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/item_notes_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_edit_date"
            android:textSize="@dimen/minor_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/item_notes_title"
            />

        <com.pw.codeset.weidgt.IconImageView
            android:id="@+id/item_notes_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#xe607;"
            app:layout_constraintTop_toTopOf="@id/item_notes_date"
            app:layout_constraintEnd_toStartOf="@id/item_notes_date"
            android:layout_marginRight="@dimen/view_defaultpadding"
            />

        <com.pw.codeset.weidgt.WarpLinearLayout
            android:id="@+id/item_notes_label_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:grivate="left"
            app:isFull="false"
            app:vertical_Space="@dimen/view_defaultpadding"
            app:horizontal_Space="@dimen/view_defaultpadding"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_notes_title"
            android:layout_marginTop="@dimen/view_defaultpadding_double"
            android:visibility="gone"
            >

        </com.pw.codeset.weidgt.WarpLinearLayout>


        <TextView
            android:id="@+id/item_notes_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notes_edit_content"
            android:textSize="@dimen/min_fontsize"
            android:ellipsize="marquee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_notes_label_container"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/view_defaultpadding_double"
            />

        <com.pw.codeset.weidgt.IconImageView
            android:id="@+id/item_notes_more_icon"
            android:layout_width="@dimen/clickable_minsize"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:text="@string/icon_arrow_down"
            android:textSize="@dimen/minor_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingRight="@dimen/view_defaultpadding"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

